--- a/echidna.yaml
+++ b/echidna.yaml
@@ -9,3 +9,5 @@ filterFunctions: []
 cryticArgs: ["--foundry-compile-all"]
 deployer: "0x7FA9385bE102ac3EAc297483Dd6233D62b3e1496"
 contractAddr: "0x7FA9385bE102ac3EAc297483Dd6233D62b3e1496"
+
+testLimit: 10000
