--- a/foundry.toml
+++ b/foundry.toml
@@ -5,3 +5,5 @@ libs = ["lib"]
 no_match_contract = "CryticTester"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+solc_version="0.8.23"
